--- a/style.css
+++ b/style.css
@@ -22,5 +22,22 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
 
+.nav__links{
+    list-style: none;
+}
+
+.nav__links li {
+    display: inline-block;
+padding: 0px 20px;
+
+}
+
+.nav__links li a {
+    transition:all .3s ease 0 ;
+}
+
+.nav__links li a:hover {
+    color: #0088a9;
 }
